Components/CadDll/Demos/View/Include/cadimage.h

typedef sgChar *PsgChar;
typedef int (WINAPI *PROGRESSPROC)(BYTE);
enum drawMode
{
	dmNormal = 0,
	dmBlack = 1,
	dmGray = 2,
};
typedef struct _CADDRAW 
{  
    DWORD Size;
    HDC DC;
    RECT R;
    BYTE DrawMode;
} CADDRAW, *LPCADDRAW;
typedef union _FRECT
{
	struct
	{
		sgFloat Left;
		sgFloat Top;
		sgFloat Z1;
		sgFloat Right;
		sgFloat Bottom;
		sgFloat Z2;
	} Points;
	
	struct
	{
		FPOINT TopLeft;
		FPOINT BottomRight;
	} Corners;	
} FRECT, *LPFRECT;
typedef struct _CADDATA
{
	WORD Tag;
	WORD Count;
	WORD TickCount;
	BYTE Flags;
	BYTE Style;    
	int Dimension;
    LPFPOINT DashDots;
    int DashDotsCount;
	int Color;
	LPVOID *Ticks;
	sgFloat Thickness;
	sgFloat Rotation;
	LPWSTR Layer;
	LPWSTR Text;
	LPWSTR FontName;
	HANDLE Handle;
	int Undefined1;
	sgFloat Undefined2;
	sgFloat Undefined3;
	LPVOID CADExtendedData;
	FPOINT Point1;
	FPOINT Point2;
	FPOINT Point3;
	FPOINT Point4;
	union
	{		
		struct
		{
			sgFloat Radius;
			sgFloat StartAngle;
			sgFloat EndAngle;
		} Arc;
		struct
		{
			HANDLE Block;
			FPOINT Scale;
		} Blocks;
		struct
		{
			sgFloat FHeight;
			sgFloat FScale;
			sgFloat RWidth;
			sgFloat RHeight;
			BYTE HAlign;
			BYTE VAlign;
		} Text;
		struct
		{
			LPFPOINT PolyPoints;
			int CountPointOfSegments;
		} Points;
	} DATA;
} CADDATA, *LPCADDATA;
		CS_API HANDLE WINAPI CADLayer(HANDLE, DWORD, LPCADDATA);
		CS_API int    WINAPI CADLayerCount(HANDLE);
		CS_API int    WINAPI CADLayerVisible(HANDLE, int);
		CS_API int    WINAPI CADVisible(HANDLE, PsgChar);
		CS_API HANDLE WINAPI CreateCAD(HWND, PsgChar);
		CS_API int    WINAPI CloseCAD(HANDLE);
		CS_API int    WINAPI CADLayoutName(HANDLE, DWORD, PsgChar, DWORD);
		CS_API int	  WINAPI CADLayoutsCount(HANDLE);
        CS_API int	  WINAPI CADSetSHXOptions(PsgChar, PsgChar, PsgChar, BOOL, BOOL);
		CS_API HANDLE WINAPI CurrentLayoutCAD(HANDLE, int, BOOL);
		CS_API int	  WINAPI DefaultLayoutIndex(HANDLE);
		CS_API int    WINAPI DrawCAD(HANDLE, HDC, LPRECT);
		CS_API int    WINAPI DrawCADEx(HANDLE, LPCADDRAW);
		CS_API HANDLE WINAPI DrawCADtoBitmap(HANDLE, LPCADDRAW);
		CS_API HANDLE WINAPI DrawCADtoJpeg(HANDLE, LPCADDRAW);
		CS_API HANDLE WINAPI DrawCADtoGif(HANDLE, LPCADDRAW);
		CS_API int    WINAPI GetBoxCAD(HANDLE, float*, float*);
		CS_API int    WINAPI GetCADBorderType(HANDLE, int*);
		CS_API int    WINAPI GetCADBorderSize(HANDLE, double*);
		CS_API int    WINAPI GetExtentsCAD(HANDLE, LPFRECT);
		CS_API int    WINAPI GetLastErrorCAD(PsgChar, DWORD);
		CS_API int    WINAPI SaveCADtoBitmap(HANDLE, LPCADDRAW, PsgChar);
		CS_API int    WINAPI SaveCADtoJpeg(HANDLE, LPCADDRAW, PsgChar);
		CS_API int    WINAPI SetDefaultColor(HANDLE, int);
		CS_API int    WINAPI SetCADBorderType(HANDLE, int);
		CS_API int    WINAPI SetCADBorderSize(HANDLE, double);
        CS_API int    WINAPI SetProcessMessagesCAD(HANDLE, int);
		CS_API int    WINAPI SaveCADtoFileWithXMLParams(HANDLE, PsgChar, PROGRESSPROC);